syntax = "proto3";

option java_package = "com.szymon.websocket.generated";
option java_outer_classname = "MonsterGenerated";

message MonsterProto {
  int32 id = 1;
  int32 position_x = 2;
  int32 position_y = 3;
  string previous_direction = 4;
  int32 timestamp = 5;
}
